--- a/public/locales/fi/translation.json
+++ b/public/locales/fi/translation.json
@@ -1,5 +1,5 @@
 {
     "Home": "Etusivu",
     "About": "Tietoa Meistä",
-    "This is a front page.": "Tämä on etusivu."
+    "This is a front page": "Tämä on etusivu"
 }
